# django-categories-api

./: .buildinfo  .changelog-config.yaml  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  api.html  changelog.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  patch  py-modindex.html  search.html  searchindex.js  setup.cfg  test.html  tox.ini
_modules/: index.html
_sources/: getting_started.rst.txt  index.rst.txt  installation.rst.txt
_static/: documentation_options.js
api/: categories.admin.CategoryAdmin.html  categories.admin.CategoryAdminForm.html  categories.admin.InlineCategoryRelation.html  categories.admin.NullTreeNodeChoiceField.html  categories.admin.html  categories.api.html  categories.apps.CategoriesConfig.html  categories.apps.handle_class_prepared.html  categories.apps.html  categories.base.CategoryBase.html  categories.base.CategoryBaseAdmin.html  categories.base.CategoryBaseAdminForm.html  categories.base.CategoryManager.html  categories.base.html  categories.editor.html  categories.editor.models.html  categories.editor.settings.html  categories.editor.templatetags.admin_tree_list_tags.TreeList.html  categories.editor.templatetags.admin_tree_list_tags.get_empty_value_display.html  categories.editor.templatetags.admin_tree_list_tags.html  categories.editor.templatetags.admin_tree_list_tags.items_for_tree_result.html  categories.editor.templatetags.admin_tree_list_tags.result_tree_list.html  categories.editor.templatetags.admin_tree_list_tags.tree_results.html  categories.editor.templatetags.html  categories.html  (+59 more)
(+59 files in other folders)
