[bumpversion]
current_version = 1.9.2
commit = True
commit_args = --no-verify
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+\w+-(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}+{$BRANCH_NAME}-{dev}
	{major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[metadata]
name = django-categories-api
version = attr:categories_api.__version__
description = Django-rest-framework API for django-categories
long_description = file:README.md
long_description_content_type = text/markdown
author = Petr Dlouhý
author_email = petr.dlouhy@email.cz
url = http://github.com/petrdlouhy/django-categories-api
classifiers = 
	Framework :: Django

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude = 
	example*
	docs
	build
include = 
	categories_api
	categories_api.*

[flake8]
ignore = D203,W503,E501
exclude = 
	.git
	.tox
	docs
	build
	dist
	doc_src
max-line-length = 119

[darglint]
ignore = DAR402

[bdist_wheel]
universal = 1

[bumpversion:part:dev]

[bumpversion:file:setup.cfg]

[bumpversion:file:categories_api/__init__.py]

[bumpversion:file(version heading):CHANGELOG.md]
search = Unreleased

[bumpversion:file(diff link):CHANGELOG.md]
search = {current_version}...HEAD
replace = {current_version}...{new_version}
